New:
- Optionally generates classes implementing INotifyPropertyChanging.

Fixed:
- Added "Nested" to Common.ARAttributes (Patch: Roberto Paterlini)
- Swapped parameters in new ArgumentNullException (Patch: Roberto Paterlini)

Preview 4

New:
- Added support for Flush for ManyToOneRelation
- Added partial Oracle drag and drop support. (Patch: Yavor Shahpasov)
- Generates metadata about properties to be used in queries (as in ICriterion selectCriterium = Expression.Eq(User.Properties.Name, name); )(Thanks: Rudi van den Belt)
- Contrib-30: Add flag to property to mark it with the DefaultMemberAttribute (or do it by default for primary key fields) (Thanks: Michael Hawksworth)
- Contrib-50: (Revised description) Allow user defined imports to replace generated imports. (Thanks: Michael Hawksworth)
- Contrib-54: Integrate NHibernateQueryGenerator into ActiveWriter (Thanks: Steve Degosserie)
- Contrib-81: Added list relation type. (Patch: Grimace of Despair)
- Moved all to vS2008
- Moved binaries license from "as is" to Apache v2. We don't need DSL Tools redistributables in setup package anymore.

Fixed:
- ManyToOne SourceNotNull is now working propertly
- Incorrectly generates Some pascal case fields as camel case.
- Contrib-52: (Revised description) Generic types are incorrectly generated if the given type name already includes generic parameters. (Thanks: Hugo Burm)
- CONTRIB-59: (Revised description) Problems with NHQG integration when the temporary path, used for out argument, contains spaces. (Patch: Steve Degosserie)
- Contrib-56: When creating a many-one relation, the generation of the Ilist should always be generic, independent of the generic settings for the objects. (Thanks: Robert van Hoornaar)
- Contrib-61: (If the namespace cannot be retrieved from the VS project system) When a class is added to a model, the .hbm.xml file that is added as a nested file is missing the first character of the class name in the filename. (Thanks: David Gardiner)