@@ -15,7 +15,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 ***************************************************************************/
 #>
-<#@ template inherits="Microsoft.VisualStudio.TextTemplating.VSHost.ModelingTextTransformation" debug="true"#>
+<#@ template inherits="Microsoft.VisualStudio.TextTemplating.VSHost.ModelingTextTransformation" debug="true" hostspecific="true"#>
 <#@ output extension=".%EXT%" #>
 <#@ ActiveWriter processor="ActiveWriterDirectiveProcessor" requires="fileName='%MODELFILE%'" #>
 <#@ import namespace="Altinoren.ActiveWriter.CodeGeneration" #>
@@ -27,6 +27,7 @@ limitations under the License.
 	propertyBag.Add("Generic.Namespace", "%NAMESPACE%");
 	propertyBag.Add("Generic.ProcessID", "%PID%");
 	propertyBag.Add("Generic.ModelFileFullName", @"%MODELFILEFULLNAME%");
+	propertyBag.Add("Generic.Host", this.Host);
 	
 	CodeGenerationHelper helper = new CodeGenerationHelper(propertyBag);
 	helper.Generate();
